CudaRuntime1/CudaRuntime1/x64/Debug/CudaRuntime1.log
  Compiling CUDA source file File.cu...
  
  D:\Code CUDA\Demo\CudaRuntime1\CudaRuntime1>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "D:\Visual Studio\Visual Studio IDE\VC\Tools\MSVC\14.42.34433\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o "D:\Code CUDA\Demo\CudaRuntime1\CudaRuntime1\x64\Debug\File.cu.obj" "D:\Code CUDA\Demo\CudaRuntime1\CudaRuntime1\File.cu" 
D:\Code CUDA\Demo\CudaRuntime1\CudaRuntime1\File.cu(13): error : expected an expression
        hello < <<1, 1 >> > ();
                ^
  
  1 error detected in the compilation of "D:/Code CUDA/Demo/CudaRuntime1/CudaRuntime1/File.cu".
  File.cu
D:\Visual Studio\Visual Studio IDE\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.6.targets(799,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "D:\Visual Studio\Visual Studio IDE\VC\Tools\MSVC\14.42.34433\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o "D:\Code CUDA\Demo\CudaRuntime1\CudaRuntime1\x64\Debug\File.cu.obj" "D:\Code CUDA\Demo\CudaRuntime1\CudaRuntime1\File.cu"" exited with code 2.
